--- a/boss/package.json
+++ b/boss/package.json
@@ -9,7 +9,8 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit"
+    "test": "npm run unit",
+    "clean":"rimraf dist"
   },
   "dependencies": {
     "axios": "^0.16.2",
